<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrazyGuess</string>
    <string name="action_settings">Settings</string>
    <string name="startgame">开始游戏</string>
    <string name="endgame">结束游戏</string>
    <string name="voicecontrol">音效选项</string>
    <string name="onthetop">排行榜</string>
    <string name="musicswitch">背景音乐开关</string>
    <string name="voiceswitch">音效开关</string>
    <string name="scors">scors</string>
    <string name="title">title</string>
    <string name="head">head</string>
    <string name="question1">question1</string>
    <string name="question2">question2</string>
    <string name="question3">question3</string>
    <string name="question4">question4</string>
	<string name="tail">tail</string>
    <string name="option1">opt1</string>
    <string name="option2">opt2</string>
    <string name="option3">opt3</string>
    <string name="option4">opt4</string>
    <string name="blank1">bla1</string>
    <string name="blank2">bla2</string>
    <string name="blank3">bla3</string>
    <string name="blank4">bla4</string>
    <string name="selectn">普通模式</string>
    <string name="selectc">挑战模式</string>
    <string name="rank"></string>
    <string name="you">您回答对了：</string>
    <string name="resultcount">0</string>
    <string name="reward">R</string>
    <string name="queA">queA</string>
	<string name="queB">queB</string>
	<string name="queC">queC</string>
	<string name="queD">queD</string>
	<string name="ge">个</string>
	<string name="get">获得积分：</string>
	<string name="exitquestion">返回</string>
	<string name="nextquesiton">下一题</string>
	<string name="nullstr">null</string>
	<string name="questiontext">题干</string>
	<string name="scorestext">得分情况</string>
	<string name="help1">提示1</string>
	<string name="help2">提示2</string>
	<string name="countinfo">统计信息</string>
	<string name="countforcorrect">答题情况</string>
	<string name="completed">该项目答题已完成</string>
	<string name="waite">敬请期待下期内容</string>
	<string name="hello">Hello World, SQLiteActivity!</string>  
    <string name="createDatabaseButton">createDatabase</string>  
    <string name="updateDatabaseButton">updateDatabase</string>  
    <string name="insertButton">insert</string>  
    <string name="updateButton">update</string>  
    <string name="selectButton">select</string>  
    <string name="deleteButton">delete</string>
    <string name="addtest">每次加1</string>
</resources>
