<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background1">
	
	<Button 
        android:id="@+id/back"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textSize="15sp"
        android:text="@string/exitquestion"/>

	<Button
	    android:id="@+id/selectnormal"
	    android:layout_width="180dip"
	    android:layout_height="60dip"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="120dip"
	    android:text="@string/selectn" />
	
	<Button
	    android:id="@+id/selectchallenge"
	    android:layout_width="180dip"
	    android:layout_height="60dip"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="200dip"
	    android:text="@string/selectc" />

</RelativeLayout>