<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">
    
    <Button 
        android:id="@+id/back"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textSize="15sp"
        android:text="@string/exitquestion"/>

    <TextView
        android:id="@+id/completedtex1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="70dip"
        android:text="@string/completed" />
    
    <TextView
        android:id="@+id/completedtex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="120dip"
        android:text="@string/waite" />
    
</RelativeLayout>